# open-license-manager

./: CMakeLists.txt  README.md  licensecc-config.cmake.in
example/: CMakeLists.txt  example.cpp
src/tools/base_lib/: CMakeLists.txt
src/tools/bootstrap/: CMakeLists.txt
src/tools/license-generator/: CMakeLists.txt
test/functional/: CMakeLists.txt  date_test.cpp  hijiaking_test.cpp  standard-license_test.cpp  volid_test.cpp
test/license-generator/: CMakeLists.txt
